--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_practicum">#3772e7</color>
+    <color name="Main_Text_Colors">#FF000000</color>
+
+
 </resources>
