--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Темная тема"
+            android:text="@string/tema"
             android:textColor="@color/Main_Text_Colors"
             android:textSize="@dimen/text_size_setting" />
 
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Поделиться приложением"
+            android:text="@string/send_app"
             android:textSize="@dimen/text_size_setting"
             android:textColor="@color/Main_Text_Colors" />
 
@@ -96,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Написать в поддрежку"
+            android:text="@string/help"
             android:textSize="@dimen/text_size_setting"
             android:textColor="@color/Main_Text_Colors" />
 
@@ -120,7 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Пользовательское соглашение"
+            android:text="@string/sogl"
             android:textSize="@dimen/text_size_setting"
             android:textColor="@color/Main_Text_Colors" />
 
