--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,59 +14,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
-        android:fontFamily="sans-serif"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/ys_display_medium"
         android:text="@string/playlist_maker"
         android:textColor="@color/white"
         android:textSize="22sp" />
 
     <Button
         android:id="@+id/search_button_main"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        style="@style/Btn_MainActivity_Style"
         android:layout_marginTop="24dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/search"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/buttun_radius_16dp"
-        app:icon="@drawable/ic_serch"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_Padding"
-        app:iconTint="@color/black"
-        android:foreground="?attr/selectableItemBackground"/>
+        app:icon="@drawable/ic_search"
+         />
 
     <Button
         android:id="@+id/media_button_main"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        style="@style/Btn_MainActivity_Style"
         android:layout_marginTop="@dimen/padding_16dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/library"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/buttun_radius_16dp"
-        app:icon="@drawable/media"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_Padding"
-        app:iconTint="@color/black"
-        android:foreground="?attr/selectableItemBackground"/>
+        app:icon="@drawable/ic_media"
+        />
 
     <Button
         android:id="@+id/setting_button_main"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        style="@style/Btn_MainActivity_Style"
         android:layout_marginTop="@dimen/padding_16dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/settings"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/buttun_radius_16dp"
-        app:icon="@drawable/qq"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_Padding"
-        app:iconTint="@color/black"
-        android:foreground="?attr/selectableItemBackground"/>
+        app:icon="@drawable/ic_settings"
+        />
 </LinearLayout>
