--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue_practicum">#FF000000</color>
+    <color name="blue_practicum_static">#3772e7</color>
     <color name="Main_Text_Colors">#FFFFFFFF</color>
+    <color name="grey_search">#FFFFFF</color>
+    <color name="grey_text">#1A1B22</color>
 </resources>
