--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_practicum">#3772e7</color>
+    <color name="blue_practicum_static">#3772e7</color>
     <color name="Main_Text_Colors">#FF000000</color>
+    <color name="grey_search">#E6E8EB</color>
+    <color name="grey_text">#AEAFB4</color>
+
 
 
 </resources>
