--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,64 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".SearchActivity">
 
-    <FrameLayout
+
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/back_and_search"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_back"
+        app:title="@string/search"
+        app:titleTextAppearance="@style/ToolbarTitleStyle" />
 
-        <ImageButton
-            android:id="@+id/ib_backToMainFromSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:foreground="?attr/selectableItemBackground"
-            android:src="@drawable/ic_back"
-            app:tint="@color/Main_Text_Colors" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="64dp"
-            android:fontFamily="@font/ys_display_medium"
-            android:text="@string/search"
-            android:textColor="@color/Main_Text_Colors"
-            android:textSize="26sp" />
-    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="horizontal"
-        >
-    <EditText
-        android:id="@+id/editText_search"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:textColor="@color/black"
-        android:layout_marginStart="@dimen/padding_16dp"
-        android:layout_marginEnd="@dimen/padding_16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_gravity="center"
-        android:inputType="text"
-        android:hint="@string/search"
-        android:textCursorDrawable="@drawable/custom_cursor"
-        android:cursorVisible="false"
-        android:textColorHint="@color/grey_text"
-        android:textSize="16sp"
-        android:lines="1"
-        android:fontFamily="@font/ys_display_regular"
-        android:drawableStart="@drawable/ic_search_grey"
-        android:paddingStart="12dp"
-        android:drawablePadding="9dp"
-        android:background="@drawable/style_for_et"
-        />
+        android:layout_height="52dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/editText_search"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/padding_16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/padding_16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/style_for_et"
+            android:cursorVisible="false"
+            android:drawableStart="@drawable/ic_search_grey"
+            android:drawablePadding="9dp"
+            android:fontFamily="@font/ys_display_regular"
+            android:hint="@string/search"
+            android:inputType="text"
+            android:lines="1"
+            android:paddingStart="12dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey_text"
+            android:textCursorDrawable="@drawable/custom_cursor"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/clearButton_search"
@@ -69,12 +52,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="28dp"
-            android:src="@drawable/ic_clear"
-            android:visibility="gone"
             android:contentDescription="Очистить текст"
-            />
+            android:src="@drawable/ic_clear"
+            android:visibility="gone" />
     </FrameLayout>
-
 
 
 </LinearLayout>
