--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,7 @@
     <color name="Main_Text_Colors">#FFFFFFFF</color>
     <color name="grey_search">#FFFFFF</color>
     <color name="grey_text">#1A1B22</color>
+    <color name="grey_ic">#FFFFFFFF</color>
+    <color name="switch_thumb_color">#3772E7</color>
+    <color name="switch_track_color">#9FBBF3</color>
 </resources>
