--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -14,6 +14,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="13dp"
+        android:background="@drawable/rounded_corners_placeholder"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -37,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/ys_display_medium"
+            android:fontFamily="@font/ys_display_regular"
             android:maxLines="1"
             android:textColor="@color/Main_Text_Colors"
             android:textSize="16sp"
