Commit №4 - Работа с Api - Добавление поиска музыки - Реализация заглушик при отсуствия интерента и при отсуствие результата

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="grey_ic">#AEAFB4</color>
     <color name="switch_thumb_color">#AEAFB4</color>
     <color name="switch_track_color">#E6E8EB</color>
+    <color name="search_ic_and_text">#1A1B22</color>
+    <color name="text_white_black">#FFFFFFFF</color>
+
 
 
 
