--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -44,7 +45,9 @@
             android:textColor="@color/black"
             android:textColorHint="@color/grey_text"
             android:textCursorDrawable="@drawable/custom_cursor"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:imeOptions="actionDone"
+            android:singleLine="true"/>
 
         <ImageView
             android:id="@+id/clearButton_search"
@@ -57,11 +60,83 @@
             android:visibility="gone" />
     </FrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent">
+
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-- Placeholder: No results -->
+        <LinearLayout
+            android:id="@+id/placeholder_no_results"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_marginTop="102dp"
+            android:visibility="gone"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_nothingfind"
+                android:layout_marginBottom="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_results"
+                android:fontFamily="@font/ys_display_medium"
+                android:textSize="19sp"
+                android:textColor="@color/search_ic_and_text" />
+
+        </LinearLayout>
+
+        <!-- Placeholder: No internet -->
+        <LinearLayout
+            android:id="@+id/placeholder_no_internet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_marginTop="102dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_nointernet" />
+
+            <TextView
+                android:layout_width="312dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="16dp"
+                android:text="@string/no_internet"
+                android:fontFamily="@font/ys_display_medium"
+                android:textSize="19sp"
+                android:textColor="@color/search_ic_and_text" />
+
+            <Button
+                android:id="@+id/refresh_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/rounder_button_search"
+                app:backgroundTint="@null"
+                android:text="@string/refresh"
+                android:fontFamily="@font/ys_display_medium"
+                android:textSize="14sp"
+                android:textAllCaps="false"
+                android:textColor="@color/text_white_black" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
