--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,6 @@
     <color name="grey_ic">#FFFFFFFF</color>
     <color name="switch_thumb_color">#3772E7</color>
     <color name="switch_track_color">#9FBBF3</color>
+    <color name="search_ic_and_text">#FFFFFFFF</color>
+    <color name="text_white_black">#1A1B22</color>
 </resources>
