--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,7 +19,7 @@
 
     <!-- Темная тема -->
     <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/dark_theme_switch"
+        android:id="@+id/themeSwitcher"
         style="@style/SwitchMaterialInSetting"
         android:layout_marginTop="24dp"
         android:text="@string/tema" />
