--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,6 @@
     <color name="switch_track_color">#9FBBF3</color>
     <color name="search_ic_and_text">#FFFFFFFF</color>
     <color name="text_white_black">#1A1B22</color>
+    <color name="text_black_white">#FFFFFFFF</color>
+
 </resources>
