--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="switch_track_color">#E6E8EB</color>
     <color name="search_ic_and_text">#1A1B22</color>
     <color name="text_white_black">#FFFFFFFF</color>
+    <color name="text_black_white">#1A1B22</color>
 
 
 
