Commit №6.1 - Исправления критических ошибок

--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 
     <ImageButton
         android:id="@+id/btnBackAudioPlayer"
@@ -16,16 +29,19 @@
     <ImageView
         android:id="@+id/trackArtAudioPlayer"
         android:layout_width="match_parent"
-        android:layout_height="312dp"
-        android:layout_marginTop="82dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/rounded_corners"
-        android:scaleType="centerCrop"
         android:clipToOutline="true"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBackAudioPlayer"
+        app:layout_constraintBottom_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/trackNameAudioPlayer"
@@ -33,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/ys_display_medium"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toBottomOf="@id/trackArtAudioPlayer"
         app:layout_constraintStart_toStartOf="@id/trackArtAudioPlayer"/>
@@ -44,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/ys_display_medium"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toBottomOf="@id/trackNameAudioPlayer"
         app:layout_constraintStart_toStartOf="@id/trackNameAudioPlayer" />
@@ -91,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="0:20"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,8 +122,8 @@
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
         android:textColor="@color/text_grey"
-        android:text="Длительность"
-        android:textSize="13dp"
+        android:text="@string/Duration"
+        android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trackTimePlayedAudioPlayer" />
@@ -119,7 +135,7 @@
         android:layout_marginEnd="16dp"
         android:paddingTop="9dp"
         android:paddingBottom="8dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/textViewLeftDuration" />
@@ -131,8 +147,8 @@
         android:layout_marginStart="16dp"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:text="Альбом"
-        android:textSize="13dp"
+        android:text="@string/album"
+        android:textSize="13sp"
         android:textColor="@color/text_grey"
         android:fontFamily="@font/ys_display_regular"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +160,7 @@
         android:layout_height="wrap_content"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toTopOf="@id/textViewLeftAlbum"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,8 +172,8 @@
         android:layout_marginStart="16dp"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:text="Год"
-        android:textSize="13dp"
+        android:text="@string/year"
+        android:textSize="13sp"
         android:textColor="@color/text_grey"
         android:fontFamily="@font/ys_display_regular"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +185,7 @@
         android:layout_height="wrap_content"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toTopOf="@id/textViewLeftYear"
         app:layout_constraintEnd_toEndOf="parent"
@@ -182,8 +198,8 @@
         android:layout_marginStart="16dp"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:text="Жанр"
-        android:textSize="13dp"
+        android:text="@string/Genre"
+        android:textSize="13sp"
         android:textColor="@color/text_grey"
         android:fontFamily="@font/ys_display_regular"
         app:layout_constraintStart_toStartOf="parent"
@@ -195,7 +211,7 @@
         android:layout_height="wrap_content"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toTopOf="@id/textViewLeftGenre"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,8 +223,8 @@
         android:layout_marginStart="16dp"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:text="Страна"
-        android:textSize="13dp"
+        android:text="@string/Country"
+        android:textSize="13sp"
         android:textColor="@color/text_grey"
         android:fontFamily="@font/ys_display_regular"
         app:layout_constraintStart_toStartOf="parent"
@@ -220,7 +236,7 @@
         android:layout_height="wrap_content"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintTop_toTopOf="@id/textViewLeftCountry"
         app:layout_constraintEnd_toEndOf="parent"
@@ -228,3 +244,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
