--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -65,11 +65,12 @@
         app:layout_constraintTop_toBottomOf="@id/trackNameAudioPlayer"
         app:layout_constraintStart_toStartOf="@id/trackNameAudioPlayer" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/btnPlayAudioPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +81,6 @@
         android:id="@+id/btnAddAudioPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="24dp"
         android:layout_marginEnd="55dp"
         app:layout_constraintBottom_toBottomOf="@id/btnPlayAudioPlayer"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="0:20"
+        android:text="0:00"
         android:textSize="14sp"
         android:textColor="@color/text_black_white"
         app:layout_constraintEnd_toEndOf="parent"
