Commit №7.1 - Исправление критических ошибок(и доп)

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,5 +13,6 @@
     <color name="text_black_white">#FFFFFFFF</color>
     <color name="text_grey">#AEAFB4</color>
     <color name="back_ic_audio_player">#FFFFFF</color>
+    <color name="ic_clear">#1A1B22</color>
 
 </resources>
