--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="text_black_white">#1A1B22</color>
     <color name="text_grey">#AEAFB4</color>
     <color name="back_ic_audio_player">#1A1B22</color>
+    <color name="ic_clear">#AEAFB4</color>
 
 
 
