--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".SearchActivity">
+    tools:context=".presentation.ui.SearchActivity">
 
 
     <com.google.android.material.appbar.MaterialToolbar
