--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,13 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <style name="CustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="ToolbarTitleStyle">
         <item name="android:textSize">26sp</item>
         <item name="android:textColor">@color/Main_Text_Colors</item>
